# home-sync

./: .env.local.example  .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  playwright-config.json  pyproject.toml  requirements-dev.txt  todo.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: homesync-lead-architect.md  nextjs-frontend-specialist.md  pdf-processing-specialist.md
.claude/commands/: wakeup.md
.serena/: project.yml
.serena/memories/: business_domain_knowledge.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  tech_stack_and_architecture.md  testing_strategy.md
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: pdf.py  projects.py
backend/app/schemas/: pdf.py
backend/app/services/: pdf_service.py  supabase_service.py
backend/samples/: README.md  generate_sample_pdf.py
docs/: pdf-implementation-strategy.md  ticket-001-web-ui.md  ticket-002-pdf-service.md  ticket-003-database.md  ticket-004-complex.md  tips.md  todo.md
docs/samples/: generate_sample_pdf.py
frontend/: .env.example  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: pdf.ts
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/projects/: GanttChart.tsx  PDFExportButton.tsx  PDFImportButton.tsx  PDFImportModal.tsx  ProjectFilters.tsx  ProjectList.tsx  index.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx
frontend/src/lib/: types.ts
frontend/src/lib/services/: dashboardService.ts  pdfService.ts  pdfUploadService.ts  projectService.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/lib/types/: database.ts
src/app/: layout.tsx  page.tsx
src/app/actions/: dashboard.ts  projects.ts  schedules.ts
src/app/projects/: page.tsx
src/app/projects/[id]/: page.tsx
src/components/layout/: Layout.tsx
src/components/projects/: GanttChart.tsx  ProjectList.tsx  ProjectOverview.tsx  ScheduleTable.tsx  index.ts
src/components/ui/: Table.tsx  Tabs.tsx  index.ts
src/lib/: mockData.ts  types.ts  utils.ts
src/lib/supabase/: server.ts
